add section first + css

--- a/app/scss/core/_variables.scss
+++ b/app/scss/core/_variables.scss
@@ -2,16 +2,16 @@
 $font_base: 'AlegreyaSans', sans-serif;
 $OpenSans: 'OpenSans', sans-serif;
 $MuseoSansCyrl: 'MuseoSansCyrl', serif;
-$font_base_size: 14px;
+$font_base_size: 16px;
 
 // color
-$grey_color: #2f3234;
-$grey_hover_color: #1f2122;
-$accent_color: #e45028;
-$accent_hover_color: #c1401e;
+$grey_color: #666666;
+$grey_hover_color: #0d0d0d;
+$accent_color: #0f5a47;
+$accent_hover_color: #0b4d3c;
 
 // size
-$content_width: 960px;
+$content_width: 940px;
 
 // z-index
-$z-navpage: 10;
+$z-feature: 10;
