--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -1,5 +1,6 @@
 body {
 	overflow-y: scroll;
+	overflow-x: hidden;
 	font-family: $font_base;
 	font-size: $font_base_size;
 	color: $grey_color;
@@ -20,4 +21,25 @@ body {
 	margin: 0 auto;
 	padding: 0 10px;
 }
-	
+
+.button {
+	font-size: em(18px);
+	line-height: 1;
+	text-transform: uppercase;
+	font-weight: 800;
+	padding: 22px 35px 20px;
+	border-radius: 35px;
+	color: #fff;
+	background: $accent_color;
+	&:hover {
+		background: $accent_hover_color;
+	}
+
+	&--white {
+		color: $accent_color;
+		background: #fff;
+		&:hover {
+			background: rgba(255, 255, 255, .8);
+		}
+	}
+}
