--- a/app/scss/core/_reset.scss
+++ b/app/scss/core/_reset.scss
@@ -6,6 +6,7 @@ body,div,section,ul,li,h1,h2,h3,h4,h5,h6,form,input,textarea,select,p {
 }
 
 a {
+	display: inline-block;
 	outline: none;
 	color: inherit;
 	text-decoration: none;
