--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -1,8 +1,14 @@
-@import "core/_variables";
-@import "core/_mixins";
-@import "core/_fonts";
+@import 'core/_variables';
+@import 'core/_mixins';
+@import 'core/_fonts';
 
-@import "../../node_modules/normalize.css/normalize";
-@import "core/_reset";
-@import "core/_base";
+@import '../../node_modules/normalize.css/normalize';
+@import 'core/_reset';
+@import 'core/_base';
+
+@import 'layout/first';
+@import 'blocks/header';
+@import 'blocks/logo';
+@import 'blocks/nav';
+@import 'blocks/feature'
 
