--- a/app/template/_first.html
+++ b/app/template/_first.html
@@ -17,17 +17,17 @@
 
     <ul class="feature">
       <li class="feature__item">
-        <div class="feature__img feature__img--5"></div>
+        <div class="feature__img feature__img--leaves"></div>
         <div class="feature__text">100% натуральный продукт</div>
       </li>
 
       <li class="feature__item">
-        <div class="feature__img feature__img--6"></div>
+        <div class="feature__img feature__img--car"></div>
         <div class="feature__text">3-5 дней доставка по РФ</div>
       </li>
 
       <li class="feature__item">
-        <div class="feature__img feature__img--4"></div>
+        <div class="feature__img feature__img--ruler"></div>
         <div class="feature__text">Не портит фигуру</div>
       </li>
     </ul>
