--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -22,6 +22,14 @@ body {
 	padding: 0 10px;
 }
 
+.section-title {
+	font-size: em(48px);
+	font-weight: bold;
+	text-transform: uppercase;
+	color: $grey_hover_color;
+	margin-bottom: 25px;
+}
+
 .button {
 	font-size: em(18px);
 	line-height: 1;
