--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -10,5 +10,6 @@
 @import 'blocks/header';
 @import 'blocks/logo';
 @import 'blocks/nav';
-@import 'blocks/feature'
+@import 'blocks/feature';
 
+@import 'layout/about';
