add section bars + css

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -13,3 +13,8 @@
 @import 'blocks/feature';
 
 @import 'layout/about';
+
+@import 'layout/bars';
+@import 'blocks/slider';
+@import 'blocks/composition';
+
