--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -4,10 +4,10 @@
   <nav class="nav">
     <ul class="nav__list">
       <li class="nav__item">
-        <a href="#" class="nav__link">О нас</a>
+        <a href="#about" class="nav__link">О нас</a>
       </li>
       <li class="nav__item">
-        <a href="#" class="nav__link">Батончики</a>
+        <a href="#bars" class="nav__link">Батончики</a>
       </li>
       <li class="nav__item">
         <a href="#" class="nav__link">Команда</a>
