add section menu + css

--- a/app/scss/blocks/_composition.scss
+++ b/app/scss/blocks/_composition.scss
@@ -45,7 +45,7 @@
   background: #fff;
   font-weight: 500;
   color: #2f3234;
-  transition: .3s opacity ease;
+  transition: .3s ease;
 }
 
 .composition__item {
