--- a/app/template/_bars.html
+++ b/app/template/_bars.html
@@ -1,4 +1,4 @@
-<div class="bars" id="bars">
+<div class="section bars">
   <div class="bars__container container">
     <div class="slider">
       <div class="slider__control">
