--- a/app/template/_team.html
+++ b/app/template/_team.html
@@ -1,4 +1,4 @@
-<section class="team" id="team">
+<section class="section team">
   <div class="team__container container">
     <h2 class="section-title">Команда</h2>
 
