--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -1,19 +1,30 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
 body {
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow-y: auto;
 	font-family: $font_base;
 	font-size: $font_base_size;
 	color: $grey_color;
-
-	&.noscroll {
-		overflow: hidden;
-	}
 }
 
 .wrapper {
+	height: 100%;
 	min-width: 320px;
 	position: relative;
 	cursor: default;
+}
+
+.main-content {
+	height: 100%;
+	// overflow: hidden;
+}
+
+.section {
+	height: 100%;
 }
 
 .container {
@@ -29,6 +40,9 @@ body {
 	color: $grey_hover_color;
 	margin-bottom: 25px;
 	text-align: center;
+	&--white {
+		color: #fff;
+	}
 }
 
 .button {
