--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -25,7 +25,7 @@
 }
 
 .about__container {
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
