--- a/app/scss/layout/_first.scss
+++ b/app/scss/layout/_first.scss
@@ -5,7 +5,7 @@
 
 .first__container {
   position: relative;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
