--- a/app/template/_about.html
+++ b/app/template/_about.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<section class="section about">
   <div class="about__container container">
     <div class="about__header">
       <h2 class="section-title">почему chocco?</h2>
