--- a/app/scss/layout/_reviews.scss
+++ b/app/scss/layout/_reviews.scss
@@ -12,7 +12,7 @@
     width: 135px;
     height: 193px;
     display: block;
-    background: url(img//reviews/berryes-bg.png) no-repeat center / cover;
+    background: url(img/reviews/berryes-bg.png) no-repeat center / cover;
   }
 
   &::after {
@@ -29,7 +29,7 @@
 
 .reviews__list {
   padding: 50px 160px 35px 45px;
-  background: url(img//reviews/branch-bg.jpg) no-repeat right top;
+  background: url(img/reviews/branch-bg.jpg) no-repeat right top;
 }
 
 .reviews__item {
