--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -43,6 +43,9 @@ body {
 	&--white {
 		color: #fff;
 	}
+	&--green {
+		color: $accent_color;
+	}
 }
 
 .button {
@@ -55,6 +58,8 @@ body {
 	color: #fff;
 	background: $accent_color;
 	transition: .3s background-color ease;
+	outline: none;
+	border: 0;
 	&:hover {
 		background: $accent_hover_color;
 	}
@@ -64,6 +69,13 @@ body {
 		background: #fff;
 		&:hover {
 			background: rgba(255, 255, 255, .8);
+		}
+	}
+	&--empty {
+		color: $accent_color;
+		background: transparent;
+		&:hover {
+			background: rgba(0, 0, 0, .1);
 		}
 	}
 }
