add section contacts + css

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -31,3 +31,7 @@
 
 @import 'layout/delivery';
 @import 'forms/delivery-form';
+
+@import 'layout/contacts';
+@import 'blocks/location';
+@import 'blocks/social';
