--- a/app/scss/layout/_delivery.scss
+++ b/app/scss/layout/_delivery.scss
@@ -26,3 +26,9 @@
     background: url(img//leaf-7-bg.png) no-repeat center / cover;
   }
 }
+
+.delivery__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
