--- a/app/template/_delivery.html
+++ b/app/template/_delivery.html
@@ -1,5 +1,5 @@
 <section class="section delivery">
-  <div class="delivery__content container">
+  <div class="delivery__container container">
     <h2 class="section-title section-title--green">Закажите доставку</h2>
 
     <form class="delivery-form">
