--- a/app/template/_first.html
+++ b/app/template/_first.html
@@ -1,35 +1,43 @@
 <section class="section first">
+  //= _header.html
+
   <div class="first__container container">
-    //= _header.html
-
     <div class="first__content">
-      <h1 class="first__head">натуральные шоколадные батончики</h1>
+      <div class="first__subscribe">
+        <div class="first__head">
+          <h1 class="first__title">натуральные шоколадные батончики</h1>
 
-      <div class="first__subs">
-        <p>
-          Наши батончики идеально подходят для
-          тех, кто следит за своим здоровьем
-        </p>
-      </div>
+          <div class="first__subs">
+            <p>
+              Наши батончики идеально подходят для
+              тех, кто следит за своим здоровьем
+            </p>
+          </div>
 
-      <a href="#" class="button button--white">Заказать</a>
+          <a href="#" class="button button--white">Заказать</a>
+        </div><!-- .first__head -->
+        
+        <ul class="feature">
+          <li class="feature__item">
+            <div class="feature__img feature__img--leaves"></div>
+            <div class="feature__text">100% натуральный продукт</div>
+          </li>
+
+          <li class="feature__item">
+            <div class="feature__img feature__img--car"></div>
+            <div class="feature__text">3-5 дней доставка по РФ</div>
+          </li>
+
+          <li class="feature__item">
+            <div class="feature__img feature__img--ruler"></div>
+            <div class="feature__text">Не портит фигуру</div>
+          </li>
+        </ul>
+      </div><!-- .first__subscribe -->
+
+      <div class="first__bars">
+        <img src="files/img/bars.png" alt="bars">
+      </div><!-- .first__bars -->
     </div><!-- .first__content -->
-
-    <ul class="feature">
-      <li class="feature__item">
-        <div class="feature__img feature__img--leaves"></div>
-        <div class="feature__text">100% натуральный продукт</div>
-      </li>
-
-      <li class="feature__item">
-        <div class="feature__img feature__img--car"></div>
-        <div class="feature__text">3-5 дней доставка по РФ</div>
-      </li>
-
-      <li class="feature__item">
-        <div class="feature__img feature__img--ruler"></div>
-        <div class="feature__text">Не портит фигуру</div>
-      </li>
-    </ul>
   </div><!-- .container -->
 </section>
