--- a/app/template/_works.html
+++ b/app/template/_works.html
@@ -1,5 +1,5 @@
 <section class="section works">
-  <div class="works__content container">
+  <div class="works__container container">
     <h2 class="section-title">Как мы работаем</h2>
 
     <div class="video">
