--- a/app/scss/blocks/_feature.scss
+++ b/app/scss/blocks/_feature.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   z-index: $z-feature;
+
+  @include phone {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .feature__item {
@@ -12,6 +17,14 @@
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @include tablet {
+    margin-right: 20px;
+  }
+
+  @include phone {
+    margin-bottom: 10px;
   }
 }
 
