--- a/app/scss/blocks/_slider.scss
+++ b/app/scss/blocks/_slider.scss
@@ -1,7 +1,9 @@
 .slider {
+  height: 100%;
   position: relative;
-  padding-right: 20px;
-  padding-left: 20px;
+  // padding-right: 20px;
+  // padding-left: 20px;
+  overflow: hidden;
 }
 
 .slider__control {
@@ -12,6 +14,13 @@
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 10;
+
+  @include tablet {
+    top: 40%;
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 
 .slider__arrow {
@@ -27,14 +36,28 @@
 }
 
 .slider__list {
-  overflow: hidden;
+  display: flex;
+  height: 100%;
+  // transform: translateX(-100%);
+  transition: .3s transform ease;
 }
 
 .slider__item {
-  min-height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  z-index: 5;
+
+  @include tablet {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .slider__pictures {
@@ -42,6 +65,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @include tablet {
+    width: 70%;
+  }
 }
 
 .slider__img {
@@ -73,6 +100,12 @@
 
 .slider__content {
   width: 42%;
+  z-index: 5;
+
+  @include tablet {
+    width: 80%;
+    text-align: center;
+  }
 }
 
 .slider__title {
@@ -86,12 +119,21 @@
 .slider__subscribe {
   font-size: em(18px);
   margin-bottom: 35px;
+
+  @include tablet {
+    margin-bottom: 20px;
+  }
 }
 
 .slider__params {
   display: flex;
   font-size: em(18px);
   margin-bottom: 30px;
+
+  @include tablet {
+    margin-bottom: 15px;
+    justify-content: center;
+  }
 }
 
 .slider__kkal {
@@ -122,6 +164,10 @@
 .slider__footer {
   display: flex;
   align-items: center;
+
+  @include tablet {
+    justify-content: center;
+  }
 }
 
 .slider__price {
