--- a/app/scss/blocks/_video.scss
+++ b/app/scss/blocks/_video.scss
@@ -1,8 +1,24 @@
+#video {
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+}
+
 .video {
-  position: relative;
-  width: 660px;
-  height: 405px;
+  max-width: 660px;
   margin: 0 auto;
+  overflow: hidden;
+  z-index: 5;
+
+  @include tablet {
+    width: 96%;
+  }
+}
+
+.video__screen {
+  width: 100%;
+  position: relative;
   overflow: hidden;
 }
 
