--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -1,81 +1,91 @@
-html, body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 body {
-	overflow-y: auto;
-	font-family: $font_base;
-	font-size: $font_base_size;
-	color: $grey_color;
+  min-width: 320px;
+  overflow-y: auto;
+  font-family: $font_base;
+  font-size: $font_base_size;
+  color: $grey_color;
+
+  @include tablet {
+    font-size: ($font_base_size - 1);
+  }
+
+  @include phone {
+    font-size: ($font_base_size - 2);
+  }
 }
 
 .wrapper {
-	height: 100%;
-	min-width: 320px;
-	position: relative;
-	cursor: default;
+  height: 100%;
+  position: relative;
+  cursor: default;
 }
 
 .main-content {
-	height: 100%;
-	// overflow: hidden;
+  height: 100%;
+  // overflow: hidden;
 }
 
 .section {
-	height: 100%;
+  height: 100%;
 }
 
 .container {
-	max-width: $content_width;
-	margin: 0 auto;
-	padding: 0 10px;
+  max-width: $content_width;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .section-title {
-	font-size: em(48px);
-	font-weight: bold;
-	text-transform: uppercase;
-	color: $grey_hover_color;
-	margin-bottom: 25px;
-	text-align: center;
-	&--white {
-		color: #fff;
-	}
-	&--green {
-		color: $accent_color;
-	}
+  font-size: em(48px);
+  font-weight: bold;
+  text-transform: uppercase;
+  color: $grey_hover_color;
+  margin-bottom: 25px;
+  text-align: center;
+  z-index: 5;
+  &--white {
+    color: #fff;
+  }
+  &--green {
+    color: $accent_color;
+  }
 }
 
 .button {
-	font-size: em(18px);
-	line-height: 1;
-	text-transform: uppercase;
-	font-weight: 800;
-	padding: 22px 35px 18px;
-	border-radius: 35px;
-	color: #fff;
-	background: $accent_color;
-	transition: .3s background-color ease;
-	outline: none;
-	border: 0;
-	&:hover {
-		background: $accent_hover_color;
-	}
+  font-size: em(18px);
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 800;
+  padding: 22px 35px 18px;
+  border-radius: 35px;
+  color: #fff;
+  background: $accent_color;
+  transition: 0.3s background-color ease;
+  outline: none;
+  border: 0;
+  &:hover {
+    background: $accent_hover_color;
+  }
 
-	&--white {
-		color: $accent_color;
-		background: #fff;
-		&:hover {
-			background: rgba(255, 255, 255, .8);
-		}
-	}
-	&--empty {
-		color: $accent_color;
-		background: transparent;
-		&:hover {
-			background: rgba(0, 0, 0, .1);
-		}
-	}
+  &--white {
+    color: $accent_color;
+    background: #fff;
+    &:hover {
+      background: rgba(255, 255, 255, 0.8);
+    }
+  }
+  &--empty {
+    color: $accent_color;
+    background: transparent;
+    &:hover {
+      background: rgba(0, 0, 0, 0.1);
+    }
+  }
 }
