--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -35,10 +35,14 @@
 }
 
 .about__header {
-  width: 410px;
+  max-width: 410px;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 80px;
+
+  @include tablet {
+    margin-bottom: 30px;
+  }
 }
 
 .about__subscribe {
@@ -50,11 +54,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 5;
+
+  @include tablet {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .about__item {
   max-width: 280px;
   text-align: center;
+
+  @include tablet {
+    max-width: 445px;
+  }
 }
 
 .about__img {
@@ -64,6 +78,12 @@
   border-radius: 50%;
   background: #f2f5f4;
   margin: 0 auto 35px;
+
+  @include tablet {
+    width: 110px;
+    height: 110px;
+    margin-bottom: 20px;
+  }
 }
 
 .about__svg {
@@ -86,10 +106,18 @@
   font-weight: bold;
   color: $grey_hover_color;
   margin-bottom: 30px;
+
+  @include tablet {
+    margin-bottom: 15px;
+  }
 }
 
 .about__text {
   font-size: em(18px);
   font-weight: 300;
   line-height: 1.4;
+
+  @include tablet {
+    margin-bottom: 10px;
+  }
 }
