--- a/app/scss/layout/_bars.scss
+++ b/app/scss/layout/_bars.scss
@@ -2,4 +2,7 @@
   height: 100%;
   padding-top: 24px;
   padding-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
