--- a/app/scss/layout/_reviews.scss
+++ b/app/scss/layout/_reviews.scss
@@ -27,9 +27,29 @@
   }
 }
 
+.reviews__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .reviews__list {
   padding: 50px 160px 35px 45px;
   background: url(img/reviews/branch-bg.jpg) no-repeat right top;
+
+  @include notebook {
+    padding: 50px 130px 35px 35px;
+  }
+
+  @include tablet {
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px 15px 25px 15px;
+  }
+
+  @include phone {
+    width: 100%;
+  }
 }
 
 .reviews__item {
@@ -38,6 +58,11 @@
 
   &.active {
     display: flex;
+
+    @include tablet {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
 
@@ -47,6 +72,24 @@
   height: 259px;
   margin-right: 20px;
   background: no-repeat center / cover;
+
+  @include tablet {
+    width: 205px;
+    height: 207px;
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+
+  @include phone {
+    width: 121px;
+    height: 124px;
+  }
+}
+
+.reviews__block {
+  @include tablet {
+    text-align: center;
+  }
 }
 
 .reviews__head {
@@ -76,6 +119,10 @@
 
   & ~ .reviews__thumd-item {
     margin-left: 3px;
+
+    @include phone {
+      margin-left: 15px;
+    }
   }
 
   &.active > .reviews__thumd-link {
@@ -89,6 +136,11 @@
   height: 72px;
   border-radius: 50%;
   border: 4px solid transparent;
+
+  @include phone {
+    width: 64px;
+    height: 64px;
+  }
 
   &:hover {
     border: 4px solid rgba($accent_color, .5);
