--- a/app/scss/layout/_team.scss
+++ b/app/scss/layout/_team.scss
@@ -29,24 +29,42 @@
   }
 }
 
+.team__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .team__list {
   display: flex;
   justify-content: space-between;
+  z-index: 5;
+
+  @include tablet {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .team__item {
-  width: 25%;
+  width: 24%;
 
-  & ~ .team__item {
-    margin-left: 20px;
+  @include tablet {
+    width: 30%;
+    margin: 0 20px;
   }
 }
 
 .team__img {
-  width: 220px;
+  width: 100%;
   height: 288px;
   margin-bottom: 25px;
   background: no-repeat center / cover;
+
+  @include tablet {
+    margin-bottom: 10px;
+    height: 184px;
+  }
 }
 
 .team__block {
@@ -87,6 +105,10 @@
   opacity: 0;
   font-size: em(18px);
   transition: .3s opacity ease;
+
+  @include tablet {
+    margin-bottom: 10px;
+  }
 }
 
 .team__head {
