--- a/app/template/_bars.html
+++ b/app/template/_bars.html
@@ -89,6 +89,83 @@
             </div>
           </div><!-- .slider__content -->
         </li>
+
+        <li class="slider__item">
+          <div class="slider__pictures">
+            <div class="slider__img">
+              <img src="files/img/slider/product2.png" alt="product1">
+            </div>
+          </div>
+
+          <div class="slider__content">
+            <div class="composition">
+              <span class="composition__text">Состав</span>
+              <ul class="composition__list">
+                <li class="composition__item">
+                  <span class="composition__img composition__img--grape"></span>
+                  <span class="composition__title">Виноград</span>
+                  <span class="composition__weight">25</span>
+                </li>
+
+                <li class="composition__item">
+                  <span class="composition__img composition__img--nut"></span>
+                  <span class="composition__title">Грецкий орех</span>
+                  <span class="composition__weight">32</span>
+                </li>
+
+                <li class="composition__item">
+                  <span class="composition__img composition__img--almond"></span>
+                  <span class="composition__title">Кунжутное семя</span>
+                  <span class="composition__weight">20</span>
+                </li>
+
+                <li class="composition__item">
+                  <span class="composition__img composition__img--washing-powder"></span>
+                  <span class="composition__title">Сухое молоко</span>
+                  <span class="composition__weight">10</span>
+                </li>
+
+                <li class="composition__item">
+                  <span class="composition__img composition__img--apitherapy"></span>
+                  <span class="composition__title">Зам. сахара</span>
+                  <span class="composition__weight">4</span>
+                </li>
+
+                <li class="composition__item">
+                  <span class="composition__img composition__img--beans"></span>
+                  <span class="composition__title">Какао бобы</span>
+                  <span class="composition__weight">4</span>
+                </li>
+              </ul>
+            </div><!-- .composition -->
+
+            <h2 class="slider__title">Батончик “Гранола виноград”</h2>
+
+            <div class="slider__subscribe">
+              <p>
+                Гранола из винограда, грецкого ореха и кунжутных семечек. В состав также входят: сухое молоко,
+                заменитель сахара и какао бобы.
+              </p>
+            </div>
+
+            <div class="slider__params">
+              <div class="slider__kkal">
+                <span class="slider__kkal-text">Калорийность</span>
+                <span class="slider__kkal-number">110</span>
+              </div>
+
+              <div class="slider__weight">
+                <span class="slider__weight-text">Вес</span>
+                <span class="slider__weight-number">95</span>
+              </div>
+            </div><!-- .slider__params -->
+
+            <div class="slider__footer">
+              <span class="slider__price">140</span>
+              <a href="#" class="button">Заказать</a>
+            </div>
+          </div><!-- .slider__content -->
+        </li>
       </ul>
     </div><!-- .slider -->
   </div><!-- .container -->
