--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -1,31 +1,33 @@
 <header class="header">
-  <a href="index.html" class="logo">chocco</a>
+  <div class="header__container container">
+    <a href="index.html" class="logo">chocco</a>
 
-  <nav class="nav">
-    <ul class="nav__list">
-      <li class="nav__item">
-        <a href="#" class="nav__link">О нас</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Батончики</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Команда</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Меню</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Отзывы</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Как мы работаем</a>
-      </li>
-      <li class="nav__item">
-        <a href="#" class="nav__link">Контакты</a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="1">О нас</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="2">Батончики</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="3">Команда</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="4">Меню</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="5">Отзывы</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="6">Как мы работаем</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-scroll-to="8">Контакты</a>
+        </li>
+      </ul>
+    </nav>
 
-  <a href="tel:+78009039090" class="phone">8 800 903 90 90</a>
+    <a href="tel:+78009039090" class="phone">8 800 903 90 90</a>
+  </div><!-- .container -->
 </header>
